--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -7,7 +7,7 @@ services:
     image: ghcr.io/danny-avila/librechat-dev-api:latest
     container_name: LibreChat-API
     ports:
-      - 3080:3080
+      - 127.0.0.1:3080:3080
     depends_on:
       - mongodb
       - rag_api
@@ -42,6 +42,7 @@ services:
     restart: always
     volumes:
       - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./client/ssl:/etc/nginx/ssl:ro
   mongodb:
     container_name: chat-mongodb
     # ports:  # Uncomment this to access mongodb from outside docker, not safe in deployment
